# scrap-quotes

./: .envrc  README.md  pyproject.toml
scrap_books/: quotes.json
scrap_books/scrap_books/: database.py  items.py  middlewares.py  pipelines.py  quotes.db  settings.py
scrap_books/scrap_books/spiders/: quotes_spider.py
