[tool.poetry]
name = "scrapy-project"
version = "0.1.0"
description = ""
authors = ["alexander tesfay habte <alexander.habte@oxylabs.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
scrapy = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
